unpackaged/main/default/objects/Case_Handoff__c/Case_Handoff__c.object-meta.xml
<CustomObject>
    <label>Case Handoff</label>
    <nameField>
        <label>Case Handoff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Handoffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>