unpackaged/main/default/objects/Case_Handoff__c/fields/From_Region_auto__c.field-meta.xml
<CustomField>
    <fullName>From_Region_auto__c</fullName>
    <description>Automatically defines From Region</description>
    <formula>Text(From_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Region</label>
    <type>Text</type>
</CustomField>