unpackaged/main/default/objects/Case_Handoff__c/fields/Handoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Notes__c</fullName>
    <inlineHelpText>Initially reported Issue
Actions that have been taken so far
Current Status of the Issue
Next actions required 
Explain if there is any specific reason why this needs a handoff   
Contact details</inlineHelpText>
    <label>Handoff Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>