unpackaged/main/default/objects/Case_Handoff__c/fields/Handoff_Type__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handoff Type</label>
    <type>Text</type>
</CustomField>