unpackaged/main/default/objects/Case_Handoff__c/fields/TEXT_Case_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TEXT_Case_Account_Name__c</fullName>
    <formula>Case__r.Zapier_Account_Name__c</formula>
    <label>TEXT Case Account Name</label>
    <type>Text</type>
</CustomField>