unpackaged/main/default/objects/Case_Handoff__c/fields/TEXT_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>TEXT_Case_Number__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <label>TEXT Case Number</label>
    <type>Text</type>
</CustomField>