unpackaged/main/default/objects/Case_Handoff__c/fields/To_Region__c.field-meta.xml
<CustomField>
    <fullName>To_Region__c</fullName>
    <label>To Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>GDL</fullName>
            </value>
            <value>
                <fullName>Scottsdale</fullName>
            </value>
            <value>
                <fullName>Japan/Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>