unpackaged/main/default/objects/Case_Handoff__c/recordTypes/Multiple_Region_Handoff.recordType-meta.xml
<RecordType>
    <fullName>Multiple_Region_Handoff</fullName>
    <active>false</active>
    <description>If you own a case from a customer, that needs to be actioned from support team members during the next time zones and 24 hours.</description>
    <label>Multiple Region Handoff</label>
</RecordType>