unpackaged/main/default/objects/Case_Handoff__c/recordTypes/Single_Region_Handoff.recordType-meta.xml
<RecordType>
    <fullName>Single_Region_Handoff</fullName>
    <active>true</active>
    <description>If you own a case from a customer not based in your region and it requires someone on the customer&#39;s timezone to handle it.</description>
    <label>Single Region Handoff</label>
</RecordType>