unpackaged/main/default/objects/Case_Handoff__c/validationRules/Cant_Handoff_a_Case_Watch.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Handoff_a_Case_Watch</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Case__r.Monitor_My_Case__c = TRUE, TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>You can&#39;t handoff a case that is being monitored</errorMessage>
</ValidationRule>