unpackaged/main/default/objects/Case_Handoff__c/validationRules/Case_must_have_an_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_must_have_an_owner</fullName>
    <active>false</active>
    <description>handoff cannot be created if the case does not have an owner</description>
    <errorConditionFormula>ISBLANK(TEXT(Case__r.Owner:User.CS_Role__c) )</errorConditionFormula>
    <errorMessage>The case must have an owner before handing it over</errorMessage>
</ValidationRule>