unpackaged/main/default/objects/Case_Handoff__c/validationRules/From_Region_and_User_Region_must_match.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Region_and_User_Region_must_match</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( From_Region__c ) &lt;&gt;  TEXT($User.CS_Region__c )</errorConditionFormula>
    <errorDisplayField>From_Region__c</errorDisplayField>
    <errorMessage>From region must match your region</errorMessage>
</ValidationRule>