unpackaged/main/default/objects/Case_Handoff__c/validationRules/Own_Handoff_In_User_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Own_Handoff_In_User_Region</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    CASE( Case__r.Sales_Division__c ,
         &quot;Americas&quot;,IF( CONTAINS(TEXT(From_Region__c), &quot;US&quot;),1,0),
         &quot;EMEA&quot;,IF( CONTAINS(TEXT(From_Region__c), &quot;EMEA&quot;),1,0),
         &quot;APAC&quot;,IF( CONTAINS(TEXT(From_Region__c), &quot;APAC&quot;),1,0),
         &quot;Japan&quot;,IF( CONTAINS(TEXT(From_Region__c), &quot;Japan&quot;),1,0)
         ,0)&gt;=1,
     /* RecordTypeId = &quot;01214000000AWFA&quot;, INACTIVE RECORD TYPE*/
      $User.Id &lt;&gt;  Handoff_Owner__r.Id 
)</errorConditionFormula>
    <errorDisplayField>Handoff_Owner__c</errorDisplayField>
    <errorMessage>You must own the handoff for a customer in  your region.</errorMessage>
</ValidationRule>