unpackaged/main/default/objects/Case_Handoff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Handoff_Type__c</columns>
    <columns>Handoff_Owner__c</columns>
    <columns>From_Region__c</columns>
    <columns>To_Region__c</columns>
    <columns>Date_Time_Created__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>