unpackaged/main/default/objects/Case_Handoff__c/listViews/Single_Region_Handoff.listView-meta.xml
<ListView>
    <fullName>Single_Region_Handoff</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>Date_Time_Created__c</columns>
    <columns>Case__c</columns>
    <columns>From_Region__c</columns>
    <columns>To_Region__c</columns>
    <columns>Handoff_Notes__c</columns>
    <columns>Handoff_Owner__c</columns>
    <columns>Handoff_Type__c</columns>
    <columns>TEXT_Case_Account_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Handoff_Type__c</field>
        <operation>equals</operation>
        <value>Single_Region_Handoff</value>
    </filters>
    <label>Single Region Handoff</label>
    <language>en_US</language>
</ListView>